--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.profiles.active=dev
+spring.datasource.plataform=postgres
+spring.datasource.username=postgres
+spring.datasource.password=dr09092003
+spring.datasource.url=jdbc:postgresql://localhost:5432/apiSpring
+spring.jpa.hibernate.ddl-auto=update
